# ElmoSeram

Server/: CMakeLists.txt  README.md
Server/database/: elmoseram.sql
Server/src/: Main.cpp
Server/src/Connection/Client/: Client.cpp  Client.h
Server/src/Connection/Server/: Server.cpp  Server.h
Server/src/Database/: DB_MySql_Connector.cpp  DB_MySql_Connector.h
Server/src/Manager/: ClientHandler.cpp  ClientHandler.h  HandleRequests.cpp  Manager.cpp  Manager.h  UpdateCH_LinkedList.cpp
Server/src/Utilities/: Consts.h  DateTime.cpp  DateTime.h  Message.h  Parser.cpp  Parser.h
